--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/src/Shipwreck.BlazorTypeahead.Demo/wwwroot/css/**
+/src/Shipwreck.BlazorTypeahead.Demo/wwwroot/js/**
