--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@ ASALocalRun/
 healthchecksdb
 /src/Shipwreck.BlazorTypeahead.Demo/wwwroot/css/**
 /src/Shipwreck.BlazorTypeahead.Demo/wwwroot/js/**
+/src/Shipwreck.BlazorTypeahead/scripts/*.ts
+/src/Shipwreck.BlazorTypeahead/content/*
