--- a/src/Shipwreck.BlazorTypeahead/package.json
+++ b/src/Shipwreck.BlazorTypeahead/package.json
@@ -9,6 +9,7 @@
     "gulp-uglify": "^3.0.1",
     "typescript": "3.5.3",
     "gulp-typescript": "5.0.1",
-    "bootstrap-3-typeahead": "4.0.2"
+    "bootstrap-3-typeahead": "4.0.2",
+    "@dotnet/jsinterop": "3.0.0"
   }
 }
