--- a/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
+++ b/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
@@ -6,7 +6,7 @@
     <IsPackable>true</IsPackable>
     <LangVersion>7.3</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/pgrho/blazor-typeahead</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
