--- a/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
+++ b/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
@@ -25,8 +25,13 @@
   <ItemGroup>
     <Content Remove="*.json" />
     <Content Remove="Properties\launchSettings.json" />
+    <None Remove="scripts\Shim.ts" />
     <Content Include="package.json" Pack="False" />
     <Content Include="Properties\launchSettings.json" Pack="False" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="scripts\Shim.ts" />
   </ItemGroup>
 
 </Project>
