--- a/src/Shipwreck.BlazorTypeahead/package.json
+++ b/src/Shipwreck.BlazorTypeahead/package.json
@@ -10,6 +10,7 @@
     "typescript": "3.5.3",
     "gulp-typescript": "5.0.1",
     "bootstrap-3-typeahead": "4.0.2",
-    "@dotnet/jsinterop": "3.0.0"
+    "@dotnet/jsinterop": "3.0.0",
+    "@types/jquery": "3.3.31"
   }
 }
