--- a/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
+++ b/src/Shipwreck.BlazorTypeahead/Shipwreck.BlazorTypeahead.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <LangVersion>7.3</LangVersion>
@@ -12,26 +12,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="content\**\*.js" LogicalName="blazor:js:%(RecursiveDir)%(Filename)%(Extension)" />
-    <EmbeddedResource Include="content\**\*.css" LogicalName="blazor:css:%(RecursiveDir)%(Filename)%(Extension)" />
-    <EmbeddedResource Include="content\**" Exclude="**\*.js;**\*.css" LogicalName="blazor:file:%(RecursiveDir)%(Filename)%(Extension)" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.1.0-preview3.19555.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.1.0-preview3.19555.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.2.0-preview1.20073.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.2.0-preview1.20073.1" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Remove="*.json" />
     <Content Remove="Properties\launchSettings.json" />
-    <None Remove="scripts\Shim.ts" />
     <Content Include="package.json" Pack="False" />
     <Content Include="Properties\launchSettings.json" Pack="False" />
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="scripts\Shim.ts" />
+    <None Remove="scripts\*" />
+    <None Include="scripts\Shim.js" Pack="False" />
+    <None Include="scripts\Shim.js.map" Pack="False" /> 
+    <None Include="scripts\Shim.ts">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
