--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,8 +1,9 @@
 ﻿<Project>
   <PropertyGroup>
-    <Version>0.1.1</Version>
+    <Version>0.2.0</Version>
     <Authors>shipwreck.jp</Authors>
-    <Copyright>Copyright © 2019-2020 shipwreck.jp</Copyright>
+    <LangVersion>10.0</LangVersion>
+    <Copyright>Copyright © 2019-2022 shipwreck.jp</Copyright>
     <IsDeterministic>true</IsDeterministic>
     <NoWarn>1591;1701;1702</NoWarn>
   </PropertyGroup>
